# Reframed-plugin-templates

./: README.md
realtime/: CMakeLists.txt
realtime/forms/: ExampleView.ui
realtime/include/example-realtime/: ExamplePlugin.hpp
realtime/include/example-realtime/listeners/: ExampleListener.hpp
realtime/include/example-realtime/models/: ExampleModel.hpp
realtime/include/example-realtime/views/: ExampleView.hpp
realtime/src/: ExamplePlugin.cpp  Plugin.cpp
realtime/src/models/: ExampleModel.cpp
realtime/src/views/: ExampleView.cpp
simple/: CMakeLists.txt
simple/src/: Plugin.cpp
standalone/: .gitignore  CMakeLists.txt
standalone/forms/: ExampleView.ui
standalone/include/myplugin/listeners/: ExampleListener.hpp
standalone/include/myplugin/models/: ExampleModel.hpp
standalone/include/myplugin/views/: ExampleView.hpp
standalone/src/: Plugin.cpp
standalone/src/models/: ExampleModel.cpp
standalone/src/views/: ExampleView.cpp
ui/: CMakeLists.txt
ui/forms/: ExampleView.ui
ui/include/example-ui/: ExamplePlugin.hpp
ui/include/example-ui/listeners/: ExampleListener.hpp
ui/include/example-ui/models/: ExampleModel.hpp
ui/include/example-ui/views/: ExampleView.hpp
ui/src/: ExamplePlugin.cpp  Plugin.cpp
ui/src/models/: ExampleModel.cpp
ui/src/views/: ExampleView.cpp
